[package]
name = "pass"
version = "0.1.0"
authors = ["Krzysztof Darasz <krzysztof.darasz@brightpearl.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.4"
bincode = "1.3.1"
indicatif = "0.15.0"
md5 = "0.7.0"
memmap = "0.7.0"
rand = "0.8.0"
rayon = "1.5.0"
serde = {version="1.0.118", features = ["derive"]}
snap = "1.0.3"
